--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,19 @@
         <item name="android:indeterminateBehavior">repeat</item>
         <item name="android:indeterminateDuration">3500</item>
     </style>
+    <style name="LoginWidget">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/margin_50</item>
+        <item name="android:layout_marginRight">@dimen/margin_50</item>
+        <item name="android:alpha">0.8</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+    <style name="LoginButton">
+        <item name="android:height">@dimen/height_50</item>
+        <item name="android:background">@drawable/line</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_18</item>
+    </style>
 </resources>
