--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,12 @@
 <resources>
 
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="colorPrimaryDark">#3A5FCD</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+
+    </style>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -29,4 +36,19 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/text_18</item>
     </style>
+    <style name="radioButton_menu">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:textColor">@color/bg_page</item>
+        <item name="android:textSize">@dimen/text_13</item>
+        <item name="android:singleLine">true</item>
+
+
+    </style>
+
+<style name="textDefault">
+    <item name="android:gravity">center</item>
+    <item name="android:textSize">@dimen/text_16</item>
+</style>
 </resources>
