--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/cellbg2"
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <include layout="@layout/include_toolbar" />
 
-</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/main_fl"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="6"
+        android:layout_margin="@dimen/margin_10" />
+    <RadioGroup
+        android:id="@+id/radioGroup_menu"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:background="@color/light_grey"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_15"
+        >
+
+        <RadioButton
+            android:id="@+id/menu_home"
+            style="@style/radioButton_menu"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/user_1"
+
+
+            android:text="@string/home" />
+
+        <RadioButton
+            android:id="@+id/menu_forum"
+            style="@style/radioButton_menu"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/user_2"
+            android:text="论坛"/>
+
+        <RadioButton
+            android:id="@+id/menu_center"
+            style="@style/radioButton_menu"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:drawableTop="@drawable/user_3"
+            android:layout_weight="1"
+            android:text="我"/>
+
+
+
+    </RadioGroup>
+
+
+</LinearLayout>
