--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#ffffffff</color>
     <color name="light_grey">#a3a3a3</color>
     <color name="lighter_grey">#dfdfdf</color>
+    <color name="black">#000000</color>
 </resources>
