--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <resources>
 
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
-
-        <item name="colorPrimaryDark">#3A5FCD</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
 
@@ -51,4 +49,18 @@
     <item name="android:gravity">center</item>
     <item name="android:textSize">@dimen/text_16</item>
 </style>
+    <style name="horizontalLine">
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">@dimen/margin_5</item>
+        <item name="android:layout_marginBottom">@dimen/margin_5</item>
+        <item name="android:background">@color/light_grey</item>
+    </style>
+    <style name="verticalLine">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginLeft">@dimen/margin_5</item>
+        <item name="android:layout_marginRight">@dimen/margin_5</item>
+        <item name="android:background">@color/light_grey</item>
+    </style>
 </resources>
