--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="text_20">20sp</dimen>
     <dimen name="height_70">70dp</dimen>
     <dimen name="text_13">13sp</dimen>
+    <dimen name="padding_7">7dp</dimen>
 </resources>
