--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+
     <style name="ProgressBarBig">
         <item name="android:indeterminateDrawable">@drawable/progress_big</item>
         <item name="android:minWidth">48dip</item>
@@ -19,6 +20,7 @@
         <item name="android:indeterminateBehavior">repeat</item>
         <item name="android:indeterminateDuration">3500</item>
     </style>
+
     <style name="LoginWidget">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -27,6 +29,7 @@
         <item name="android:alpha">0.8</item>
         <item name="android:orientation">horizontal</item>
     </style>
+
     <style name="LoginButton">
         <item name="android:height">@dimen/height_50</item>
         <item name="android:background">@drawable/line</item>
@@ -34,6 +37,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/text_18</item>
     </style>
+
     <style name="radioButton_menu">
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center</item>
@@ -45,10 +49,29 @@
 
     </style>
 
-<style name="textDefault">
-    <item name="android:gravity">center</item>
+    <style name="textDefault">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/text_16</item>
+
+    </style>
+<style name="edittext">
     <item name="android:textSize">@dimen/text_16</item>
+    <item name="android:textStyle">bold</item>
 </style>
+    <style name="textDefault_space1">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_20</item>
+    </style>
+    <style name="textDefault_space2">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:textSize">@dimen/text_20</item>
+        <item name="android:textColor">@color/light_grey</item>
+    </style>
+
     <style name="horizontalLine">
         <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">match_parent</item>
@@ -56,11 +79,23 @@
         <item name="android:layout_marginBottom">@dimen/margin_5</item>
         <item name="android:background">@color/light_grey</item>
     </style>
+
     <style name="verticalLine">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:layout_marginLeft">@dimen/margin_5</item>
         <item name="android:layout_marginRight">@dimen/margin_5</item>
         <item name="android:background">@color/light_grey</item>
+    </style>
+
+    <style name="detail_title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/lighter_grey</item>
+        <item name="android:padding">@dimen/padding_7</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textSize">@dimen/text_18</item>
     </style>
 </resources>
