--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,8 @@
     <dimen name="height_70">70dp</dimen>
     <dimen name="text_13">13sp</dimen>
     <dimen name="padding_7">7dp</dimen>
+    <dimen name="text_8">8sp</dimen>
+    <dimen name="text_10">10sp</dimen>
+    <dimen name="padding_5">5dp</dimen>
+    <dimen name="width_50">50dp</dimen>
 </resources>
