--- a/app/src/main/res/layout/item_collect.xml
+++ b/app/src/main/res/layout/item_collect.xml
@@ -1,43 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/cellbg2"
-    android:orientation="vertical"
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:padding="@dimen/padding_7">
-    <TextView
-        android:id="@+id/time"
-        style="@style/edittext"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    android:padding="@dimen/padding_7">
+
+    <ImageView
+        android:id="@+id/collect_img"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="3月18日"
+        android:src="@drawable/photo_buy" />
+
+    <TextView
+        android:id="@+id/name"
+        style="@style/edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_toRightOf="@id/collect_img"
+        android:text="小苹果"
         android:textColor="@color/black" />
+
+
     <TextView
         android:id="@+id/content"
         style="@style/edittext"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_below="@id/name"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_toRightOf="@id/collect_img"
+        android:text="很不错噢"
+        android:textColor="@color/light_grey" />
 
-        android:text="瑜伽课"
-        android:textColor="@color/black" />
-    <TextView
-        android:id="@+id/record"
-        style="@style/edittext"
-        android:layout_width="0dp"
-        android:gravity="center"
-        android:layout_weight="1"
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+100"
-        android:textColor="@color/black" />
-</LinearLayout>
-    <View style="@style/verticalLine"
-        />
-</LinearLayout>
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/name"
+        android:layout_marginTop="@dimen/margin_10"
+        android:src="@drawable/lajixiang" />
+</RelativeLayout>
