--- a/app/src/main/res/layout/menu_center.xml
+++ b/app/src/main/res/layout/menu_center.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/edit_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -29,6 +30,30 @@
             android:layout_margin="@dimen/margin_10"
             android:gravity="center"
             android:text="个人信息"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+        <View style="@style/verticalLine" />
+
+        <TextView
+            android:id="@+id/collect_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_10"
+            android:gravity="center"
+            android:text="个人积分"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+        <View style="@style/verticalLine" />
+
+        <TextView
+            android:id="@+id/course_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_10"
+            android:gravity="center"
+            android:text="个人里程"
             android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13" />
     </LinearLayout>
