--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="text_10">10sp</dimen>
     <dimen name="padding_5">5dp</dimen>
     <dimen name="width_50">50dp</dimen>
+    <dimen name="margin_15">15dp</dimen>
 </resources>
