--- a/app/src/main/res/values/netapi.xml
+++ b/app/src/main/res/values/netapi.xml
@@ -3,4 +3,6 @@
    <string name="Login_URL">http://211.149.244.163:8090/LoginService.asmx/Login</string>
    <!-- 注册 -->
    <string name="Register_URL">http://211.149.244.163:8090/apphtml/register.html</string>
+   <!-- 注册 -->
+   <string name="ShowAllExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/ShowAllExerciseRecord</string>
 </resources>
