--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="red">#ff0000</color>
     <color name="light_yellow">#ffbf30</color>
     <color name="bg_tab_pressed">#6633b5e5</color>
+    <color name="Orange">#FF4500</color>
 </resources>
