--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -81,8 +81,8 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:focusable="true"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:focusable="true">
 
                     <TextView
                         android:id="@+id/height_tv"
@@ -108,8 +108,8 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:focusable="true"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:focusable="true">
 
                     <TextView
                         android:id="@+id/period_tv"
@@ -141,8 +141,8 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:focusable="true"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:focusable="true">
 
                     <TextView
                         android:id="@+id/time_tv"
@@ -167,8 +167,8 @@
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-android:focusable="true"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:focusable="true">
 
                     <TextView
                         android:id="@+id/during_tv"
