--- a/app/src/main/res/layout/menu_center.xml
+++ b/app/src/main/res/layout/menu_center.xml
@@ -56,7 +56,20 @@
             android:text="个人里程"
             android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13" />
+        <View style="@style/verticalLine" />
+
+        <TextView
+            android:id="@+id/buyLesson_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_10"
+            android:gravity="center"
+            android:text="购买课程"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
     </LinearLayout>
+
 
     <ImageView
         android:id="@+id/arrow_up"
