--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,6 @@
     <dimen name="padding_5">5dp</dimen>
     <dimen name="width_50">50dp</dimen>
     <dimen name="margin_15">15dp</dimen>
+    <dimen name="width_80">80dp</dimen>
+    <dimen name="height_80">80dp</dimen>
 </resources>
