--- a/app/src/main/res/values/netapi.xml
+++ b/app/src/main/res/values/netapi.xml
@@ -7,4 +7,6 @@
    <string name="ShowAllExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/ShowAllExerciseRecord</string>
    <!-- 忘记密码 -->
    <string name="GetPassword_URL">http://211.149.244.163:8090/apphtml/getpassword.html</string>
+   <!-- 忘记密码 -->
+   <string name="AddExerciseRecord_URL">http://211.149.244.163:8090/UserAccount.asmx/AddExerciseRecord</string>
 </resources>
