--- a/app/src/main/res/layout/activity_editperson.xml
+++ b/app/src/main/res/layout/activity_editperson.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -21,31 +21,37 @@
             android:shrinkColumns="0,1,2"
             android:stretchColumns="0,1,2">
 
-            <TableRow android:layout_marginBottom="@dimen/margin_10">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_10">
 
                 <ImageView
-                    android:layout_width="10dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="left|center_vertical"
+                    android:id="@+id/user_picture"
+                    android:layout_width="@dimen/width_50"
+                    android:layout_height="@dimen/height_50"
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/avatar" />
 
                 <TextView
                     style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
-                    android:layout_gravity="left|center_vertical"
+                    android:layout_centerInParent="true"
                     android:text="修改头像"
                     android:textColor="@color/black" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/margin_10"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/margin_10"
                     android:src="@drawable/right_arrow" />
 
-            </TableRow>
+            </RelativeLayout>
 
             <View style="@style/verticalLine" />
 
@@ -63,8 +69,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/userName"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -81,6 +87,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -95,8 +102,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/neckName"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -113,6 +120,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -127,8 +135,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/gender"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -145,6 +153,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -159,13 +168,13 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/phone"
-                    android:inputType="number"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:background="@null"
+                    android:inputType="number"
                     android:text="222222"
                     android:textColor="@color/light_grey" />
 
@@ -178,6 +187,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -192,8 +202,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/email"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -210,6 +220,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -224,8 +235,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/birth"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -242,6 +253,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -256,8 +268,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/address"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -274,6 +286,7 @@
             </TableRow>
 
             <View style="@style/verticalLine" />
+
             <TableRow
                 android:layout_marginBottom="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
@@ -288,8 +301,8 @@
                     android:textColor="@color/black" />
 
                 <EditText
-                    style="@style/edittext"
                     android:id="@+id/sign"
+                    style="@style/edittext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -305,7 +318,14 @@
 
             </TableRow>
 
+            <Button
+                android:id="@+id/editPerson_submit"
+                style="@style/LoginButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_20"
 
+                android:text="@string/submit" />
         </TableLayout>
 
     </ScrollView>
