--- a/app/src/main/res/layout/fragment_common_list.xml
+++ b/app/src/main/res/layout/fragment_common_list.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@drawable/cellbg2"
+    android:background="@color/lighter_grey"
     android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/common_lv"
         android:layout_width="match_parent"
+        android:dividerHeight="@dimen/height_5"
         android:layout_height="match_parent"/>
 </LinearLayout>
