--- a/app/src/main/res/layout/item_buy_lesson.xml
+++ b/app/src/main/res/layout/item_buy_lesson.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_10"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
+    android:paddingTop="@dimen/padding_7"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/width_80"
+        android:layout_height="@dimen/height_80"
         android:layout_marginLeft="@dimen/margin_10"
         android:src="@drawable/photo_buy" />
 
@@ -35,11 +36,34 @@
             android:gravity="center"
             android:textColor="@color/blue"
             android:textSize="@dimen/text_10"
-            android:id="@+id/lesson_time"
+            android:id="@+id/lesson_start"
             android:drawableLeft="@drawable/pic_16"
             android:drawablePadding="@dimen/padding_7"
-            android:text="02：00-03：00"
+            android:text="02：00"
             android:layout_below="@id/lesson_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginTop="@dimen/margin_5"
+            android:gravity="center"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/text_10"
+            android:id="@+id/timeLine"
+
+            android:text=" - "
+            android:layout_below="@id/lesson_name"
+            android:layout_toRightOf="@id/lesson_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginTop="@dimen/margin_5"
+            android:gravity="center"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/text_10"
+            android:id="@+id/lesson_end"
+            android:text="03:00"
+            android:layout_below="@id/lesson_name"
+            android:layout_toRightOf="@id/timeLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -50,7 +74,7 @@
             android:drawableLeft="@drawable/dizhi_bug"
             android:drawablePadding="@dimen/padding_5"
             android:text="世界大厦101室"
-            android:layout_below="@id/lesson_time"
+            android:layout_below="@id/lesson_start"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -65,7 +89,7 @@
         <TextView
             android:id="@+id/payState"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/lesson_time"
+            android:layout_below="@id/lesson_start"
            android:text="已退款"
             android:textSize="@dimen/text_10"
             android:textColor="@color/light_grey"
