--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -25,8 +25,8 @@
 
     <ImageView
         android:id="@+id/course_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/width_80"
+        android:layout_height="@dimen/height_80"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/margin_10"
         android:layout_toRightOf="@id/miline"
@@ -92,7 +92,7 @@
                     android:textSize="@dimen/text_10"
                     android:text="运动时长" />
                 <TextView
-                    android:id="@+id/sports_time"
+                    android:id="@+id/mySportsTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/edittext"
@@ -126,7 +126,7 @@
                     android:textSize="@dimen/text_10"
                     android:text="卡路里" />
                 <TextView
-                    android:id="@+id/calorie"
+                    android:id="@+id/myCalorie"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/edittext"
