--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,7 @@
     <dimen name="margin_15">15dp</dimen>
     <dimen name="width_80">80dp</dimen>
     <dimen name="height_80">80dp</dimen>
+    <dimen name="height_5">5dp</dimen>
+    <dimen name="width_25">25dp</dimen>
+    <dimen name="height_10">10dp</dimen>
 </resources>
