--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#ffffffff</color>
     <color name="light_grey">#a3a3a3</color>
     <color name="lighter_grey">#dfdfdf</color>
+    <color name="light_white">#f4f4f4</color>
     <color name="black">#000000</color>
     <color name="yellow">#ffffeb25</color>
     <color name="blue">#ff39acff</color>
