--- a/app/src/main/res/layout/activity_coachinfo.xml
+++ b/app/src/main/res/layout/activity_coachinfo.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/include_toolbar" />
@@ -174,22 +174,76 @@
                 style="@style/detail_title"
                 android:text="获得证书" />
 
-            <GridView
-                android:id="@+id/cert_photos"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:numColumns="4"/>
+                android:layout_height="@dimen/height_80"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="@dimen/margin_10"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/cert_image1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/cert_image2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/cert_image3"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/cert_image4"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+            </LinearLayout>
 
 
             <TextView
                 style="@style/detail_title"
                 android:text="获得奖励" />
 
-            <GridView
-                android:id="@+id/ward_photos"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:numColumns="4"/>
+                android:layout_height="@dimen/height_80"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:layout_margin="@dimen/margin_10"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/ward_image1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/ward_image2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/ward_image3"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+                <ImageView
+                    android:id="@+id/ward_image4"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_addimage" />
+            </LinearLayout>
 
 
 
