--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <include layout="@layout/include_toolbar" />
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6"
-        android:layout_margin="@dimen/margin_10" />
+        android:layout_marginTop="@dimen/margin_5"
+         />
     <RadioGroup
         android:id="@+id/radioGroup_menu"
         android:layout_width="match_parent"
