--- a/app/src/main/res/layout/fragment_common_list.xml
+++ b/app/src/main/res/layout/fragment_common_list.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/lighter_grey"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/common_lv"
+    <com.gym.ui.widget.LoadRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:dividerHeight="@dimen/height_5"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/common_lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="@dimen/height_5" />
+    </com.gym.ui.widget.LoadRefreshLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_35"
+        android:layout_gravity="bottom"
+        android:background="@color/lighter_grey"
+        android:gravity="bottom"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/chargeMsg"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:hint="@string/chargeInfo" />
+
+        <Button
+            android:id="@+id/chargeSubmit"
+            style="@style/LoginButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/charge" />
+    </LinearLayout>
+</FrameLayout>
