--- a/app/src/main/res/layout/include_search.xml
+++ b/app/src/main/res/layout/include_search.xml
@@ -2,41 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:background="@drawable/cellbg2"
-    android:orientation="horizontal">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/nearby"
-        android:textSize="@dimen/text_16"
-        android:textColor="@color/black"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="附近" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <View style="@style/horizontalLine" />
+        <TextView
+            android:id="@+id/nearby"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="附近"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_16" />
 
-    <TextView
-        android:id="@+id/category"
-        android:textSize="@dimen/text_16"
-        android:textColor="@color/black"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="类别" />
-    <View style="@style/horizontalLine" />
-    <TextView
-        android:id="@+id/order"
-        android:textSize="@dimen/text_16"
-        android:textColor="@color/black"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="排序" />
+        <View style="@style/horizontalLine" />
+
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="类别"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_16" />
+
+        <View style="@style/horizontalLine" />
+
+        <TextView
+            android:id="@+id/order"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="排序"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_16" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/margin_5"
+        android:background="@color/light_grey" />
 </LinearLayout>
