--- a/app/src/main/res/layout/item_fit.xml
+++ b/app/src/main/res/layout/item_fit.xml
@@ -4,16 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_10"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
+   
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/width_80"
+        android:layout_height="@dimen/height_80"
+        android:scaleType="fitXY"
         android:src="@drawable/btn_addimage" />
 
     <RelativeLayout
+        android:padding="@dimen/padding_7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_20"
@@ -24,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="高温瑜珈"
-            android:textColor="@color/black"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/text_18" />
 
         <RatingBar
@@ -50,7 +53,7 @@
             android:layout_height="wrap_content" />
         <TextView
             android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/black"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13"
             android:id="@+id/item_content"
             android:background="@color/blue"
@@ -62,10 +65,11 @@
             android:layout_below="@id/item_rating"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_marginLeft="@dimen/margin_10"
-            android:textColor="@color/black"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13"
             android:id="@+id/item_time"
             android:drawableLeft="@drawable/pic_16"
+            android:drawablePadding="@dimen/margin_10"
             android:text="06:00-07:00"
 android:layout_toRightOf="@id/item_content"
             android:layout_width="wrap_content"
@@ -73,7 +77,7 @@ android:layout_toRightOf="@id/item_content"
         <TextView
             android:layout_below="@id/item_rating"
             android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/black"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13"
             android:id="@+id/item_distance"
             android:drawableLeft="@drawable/dizhi_bug"
