--- a/app/src/main/res/layout/item_points.xml
+++ b/app/src/main/res/layout/item_points.xml
@@ -4,40 +4,43 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:padding="@dimen/padding_7">
-    <TextView
-        android:id="@+id/time"
-        style="@style/edittext"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="3月18日"
-        android:textColor="@color/light_grey" />
-    <TextView
-        android:id="@+id/content"
-        style="@style/edittext"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+    android:orientation="vertical">
 
-        android:text="瑜伽课"
-        android:textColor="@color/light_grey" />
-    <TextView
-        android:id="@+id/record"
-        style="@style/edittext"
-        android:layout_width="0dp"
-        android:gravity="center"
-        android:layout_weight="1"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+100"
-        android:textColor="@color/light_grey" />
-</LinearLayout>
-    <View style="@style/verticalLine"
-        />
+        android:padding="@dimen/padding_7">
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="3月18日"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="瑜伽课"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+
+        <TextView
+            android:id="@+id/record"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="+100"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+    </LinearLayout>
+
+    <View style="@style/verticalLine" />
 </LinearLayout>
