--- a/app/src/main/res/layout/item_points_header.xml
+++ b/app/src/main/res/layout/item_points_header.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="日期"
-        android:textColor="@color/lighter_grey" />
+        android:textColor="@color/light_grey" />
     <TextView
         android:id="@+id/content"
         style="@style/edittext"
@@ -27,7 +27,7 @@
         android:gravity="center"
 
         android:text="内容"
-        android:textColor="@color/lighter_grey" />
+        android:textColor="@color/light_grey" />
     <TextView
         android:id="@+id/record"
         style="@style/edittext"
@@ -36,10 +36,10 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="记录"
-        android:textColor="@color/lighter_grey" />
+        android:textColor="@color/light_grey" />
 </LinearLayout>
     <View style="@style/verticalLine"
-        android:layout_height="@dimen/height_10"
+        android:layout_height="@dimen/height_5"
         android:layout_margin="0dp"
         android:background="@color/lighter_grey"
         />
