--- a/app/src/main/res/layout/item_publish_lesson.xml
+++ b/app/src/main/res/layout/item_publish_lesson.xml
@@ -4,16 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_10"
-    android:background="@drawable/cellbg2"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/width_80"
+        android:layout_centerVertical="true"
+        android:layout_height="@dimen/height_80"
+        android:layout_margin="@dimen/margin_10"
         android:src="@drawable/photo_buy" />
 
     <RelativeLayout
+        android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_20"
@@ -24,16 +27,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="瑜伽课"
+            android:textStyle="bold"
             style="@style/textDefault"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_13" />
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_16" />
 
 
         <TextView
             android:layout_marginTop="@dimen/margin_5"
             android:gravity="center"
             android:textColor="@color/blue"
-            android:textSize="@dimen/text_10"
+            android:textSize="@dimen/text_13"
             android:id="@+id/lesson_time"
             android:drawableLeft="@drawable/pic_16"
             android:drawablePadding="@dimen/padding_7"
@@ -43,14 +47,16 @@
             android:layout_height="wrap_content" />
         <TextView
             android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_10"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13"
             android:id="@+id/lesson_addr"
             android:drawableLeft="@drawable/dizhi_bug"
             android:drawablePadding="@dimen/padding_5"
             android:text="世界大厦101室"
             android:layout_below="@id/lesson_time"
             android:gravity="center"
+            android:singleLine="true"
+            android:maxLength="10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ImageView
@@ -62,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ImageView
+            android:visibility="invisible"
             android:id="@+id/edit"
             android:layout_alignParentRight="true"
             android:layout_below="@id/lesson_time"
