--- a/app/src/main/res/layout/item_space.xml
+++ b/app/src/main/res/layout/item_space.xml
@@ -2,74 +2,85 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_10"
-    android:background="@drawable/cellbg2"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/btn_addimage" />
+        android:layout_width="@dimen/width_80"
+        android:layout_height="@dimen/height_80"
+        android:padding="@dimen/padding_7"
+        android:src="@drawable/img_1" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_20"
-        android:layout_toRightOf="@id/item_image">
+        android:layout_toRightOf="@id/item_image"
+        android:padding="@dimen/padding_7">
 
         <TextView
             android:id="@+id/item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XX健身房就在这里"
-            android:textColor="@color/black"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/text_18" />
 
         <RatingBar
             android:id="@+id/item_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/item_price"
             android:layout_below="@id/item_title"
             android:layout_marginTop="@dimen/margin_10"
             android:isIndicator="true"
             android:progressDrawable="@drawable/ratingbar_small"
-            android:layout_alignBottom="@id/item_price"
             android:rating="2.5" />
+
         <TextView
-            android:layout_marginTop="@dimen/margin_5"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_13"
             android:id="@+id/item_price"
-            android:text="200/人"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/item_title"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_5"
             android:layout_toRightOf="@id/item_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:gravity="center"
+            android:text="200/人"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+
         <TextView
-            android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_13"
             android:id="@+id/item_content"
-            android:text="国贸 新领地"
-            android:layout_below="@id/item_rating"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
+            android:layout_height="wrap_content"
+            android:layout_below="@id/item_rating"
             android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_13"
+            android:text="国贸 新领地"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+
+        <TextView
             android:id="@+id/item_distance"
-            android:drawableLeft="@drawable/dizhi_bug"
-            android:text="500m"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/item_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_marginTop="@dimen/margin_5"
+            android:drawableLeft="@drawable/dizhi_bug"
+            android:text="500m"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
 
     </RelativeLayout>
 
+    <View
+        style="@style/verticalLine"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/margin_5"
+        android:padding="0dp" />
 </RelativeLayout>
